--- a/haxball_site/templates/core/post/list.html
+++ b/haxball_site/templates/core/post/list.html
@@ -1,45 +1,47 @@
 {% extends "core/home.html" %}
 {% load static %}
-
+{% load cache %}
 {% block scripts %}
 
     <!-- Аякс-скрипт проставления лайков-дизлайков к постам -->
 
-<script type="text/javascript" src="{% static "core/js/like-dislike.js" %}"></script>
+    <script type="text/javascript" src="{% static "core/js/like-dislike.js" %}"></script>
 
 {% endblock %}
 
 {% block postlist %}
-<div class="card my-2" style="border-radius: 25px; background-image: url({% static "img/backgrounds/bg-light-4866.png" %})">
 
-    <div class="card-body">
-        {% if count_imp != 0 %}
-        <h3 class="text-center mt-1 mb-0"><i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
+        <div class="card my-2"
+             style="border-radius: 25px; background-image: url({% static "img/backgrounds/bg-light-4866.png" %})">
 
-            Актуальные новости <i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
-        </h3>
-        <hr>
-        {% for post in posts %}
-            {% if post.important %}
-                {% include "core/include/post_important_in_list.html" with post=post %}
-            {% endif %}
-        {% endfor %}
-        {% endif %}
-        <h3 class="text-center mb-0"><i class="fa fa-newspaper-o text-success" aria-hidden="true"></i> Последние новости</h3>
-        <hr>
+            <div class="card-body">
+                {% if count_imp != 0 %}
+                    <h3 class="text-center mt-1 mb-0"><i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
 
-        {% for post in posts %}
-            {% if not post.important %}
-                {% include "core/include/post_in_list.html" with post=post %}
-            {% endif %}
-        {% endfor %}
-    </div>
+                        Актуальные новости <i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
+                    </h3>
+                    <hr>
+                    {% for post in posts %}
+                        {% if post.important %}
+                            {% include "core/include/post_important_in_list.html" with post=post %}
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+                <h3 class="text-center mb-0"><i class="fa fa-newspaper-o text-success" aria-hidden="true"></i> Последние
+                    новости</h3>
+                <hr>
+
+                {% for post in posts %}
+                    {% if not post.important %}
+                        {% include "core/include/post_in_list.html" with post=post %}
+                    {% endif %}
+                {% endfor %}
+            </div>
 
 
-    <div class="card-footer text-muted">
-        <a href="{% url 'core:all_posts' %}">Смотреть все новости</a>
-    </div>
+            <div class="card-footer text-muted">
+                <a href="{% url 'core:all_posts' %}">Смотреть все новости</a>
+            </div>
 
-</div>
-
+        </div>
 {% endblock %}
