edit players stat

--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -30,7 +30,7 @@
         <th scope="col" class="h6" style="font-weight: 800;">Турнир</th>
         <th scope="col" class="text-center"><img
                 src="{% static "img/ico/statistic/jersey.PNG" %}"
-                title="Вышел на поле"></th>
+                title="Матчей сыгранно"></th>
         <th scope="col" class="text-center"><img
                 src="{% static "img/ico/statistic/ball-alt.PNG" %}"
                 title="Забито"></th>
@@ -48,7 +48,7 @@
         <th scope="col" class="text-center">
            <img
                 src="{% static "img/ico/statistic/sub-in-alt.PNG" %}"
-                title="Вышел на поле">
+                title="Вышел на замену">
         </th>
         <th scope="col" class="text-center"><img src="{% static "img/ico/statistic/dont-do.PNG" %}"
                              title="Автоголы"></th>
