change reservation system

--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -39,7 +39,7 @@
                     <a class="dropdown-item" href="{% url 'tournament:league' 's6-cup' %}">Кубок России</a>
 
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/213/reglament">Регламент</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/218/bron_hosta">Бронь хоста</a>
+                    <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">Бронь хоста</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/219/perenosi">Переносы</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/216/transfers">Трансферы</a>
                     <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">Свободные агенты</a>
