--- a/haxball_site/templates/core/include/sidebar_for_last_activity.html
+++ b/haxball_site/templates/core/include/sidebar_for_last_activity.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "core/include/sidebar_for_last_activity.css" %}">
 {% endblock %}
 
-{% cache 60 last_activity %}
+{% cache 60 last_activity_cache %}
 
     <div class="card mt-2" style="border-radius: 20px 20px 0px 0;">
         <div class="card-header text-center p-2 bg-for-online-head" style="border-radius: 20px 20px 0px 0;">
