--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -43,7 +43,7 @@
         <th scope="col" class="text-center">
             <img
                 src="{% static "img/ico/statistic/sub-out-alt.PNG" %}"
-                title="Ушёл с поля">
+                title="Заменён">
         </th>
         <th scope="col" class="text-center">
            <img
