try to fix nulls

--- a/haxball_site/templates/core/anime/marat_anime.html
+++ b/haxball_site/templates/core/anime/marat_anime.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %}
 
-<iframe src="//kodik.info/seria/10498/839c8a333343198954cb9f360754b308/720p" width="1712" height="963" frameborder="0"
+
+{% block content %}
+<iframe src="//kodik.info/seria/10498/839c8a333343198954cb9f360754b308/720p" width="100%" height="950" frameborder="0"
         AllowFullScreen allow="autoplay *; fullscreen *"></iframe>
+{% endblock %}
