--- a/haxball_site/templates/core/anime/marat_anime.html
+++ b/haxball_site/templates/core/anime/marat_anime.html
@@ -1,6 +1,7 @@
 
 
 {% block content %}
-<iframe src="//kodik.info/seria/10498/839c8a333343198954cb9f360754b308/720p" width="100%" height="930" frameborder="0"
+
+<iframe src="//aniqit.com/season/803/839c8a333343198954cb9f360754b308/720p" width="100%" height="930" frameborder="0"
         AllowFullScreen allow="autoplay *; fullscreen *"></iframe>
 {% endblock %}
