--- a/haxball_site/templates/core/anime/marat_anime.html
+++ b/haxball_site/templates/core/anime/marat_anime.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-<iframe src="//aniqit.com/season/803/839c8a333343198954cb9f360754b308/1080p" width="100%" height="930" frameborder="0"
+<iframe src="//aniqit.com/season/803/839c8a333343198954cb9f360754b308/720p?translations=false" width="100%" height="930" frameborder="0"
         AllowFullScreen allow="autoplay *; fullscreen *"></iframe>
 {% endblock %}
