change group, add link to chat

--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -30,11 +30,19 @@
                     {% show_users_online 12 %}
                 {% endblock %}
                 {% polls_list 2 user %}
+
+                 <div class="card mt-2 mb-1">
+                     <a class="btn btn-secondary px-1" href="https://vk.me/join/72t04i5E6zNDZHTxUCNDl3u9EC4XYcmjAEc=">
+                         <img src="{% static 'img/ico/vk_1.png' %}"><span class="text-success font-weight-bold align-middle" style="font-size: 13.5pt;">Вступить в беседу</span>
+                     </a>
+                </div>
+
                 <div class="card mb-1 mr-0 mt-2 text-right">
                     <iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=%D0%92%D0%B7%D0%BD%D0%BE%D1%81%20%D0%BE%D1%82%20%22%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BA%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D1%8B%22&default-sum=300&button-text=12&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410011043451485"
                             width="100%" height="250" frameborder="0" allowtransparency="true"
                             scrolling="no"></iframe>
                 </div>
+
             </div>
             <div class="col-8 col-xl-8 col-lg-12 col-md-12 col-sm-12 mx-0 order-xl-2 order-md-1 order-lg-1">
                 <div class="row">
@@ -121,7 +129,7 @@
                     <!-- VK Widget -->
                     <div id="vk_groups"></div>
                     <script type="text/javascript">
-                        VK.Widgets.Group("vk_groups", {mode: 3, width: "auto", color1: 'F6A9ED'}, 178399720);
+                        VK.Widgets.Group("vk_groups", {mode: 3, width: "auto"}, 147630853);
                     </script>
                 </div>
 
