--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "core/core.css" %}">
     <style>
         body {
-            background-image: url({% static "img/backgrounds/bg-light-4860.png" %})
+            background-image: url({% static "img/backgrounds/bg-new-green.jpg" %})
         }
     </style>
 
@@ -23,7 +23,7 @@
 
 
     <div class="container-fluid justify-content-center"
-         style="background-image:url({% static "img/backgrounds/bg-light-4860.png" %})">
+         style="background-image:url({% static "img/backgrounds/bg-new-green.jpg" %})">
         <div class="row" style="max-width: 1600px; position: relative; margin: 0 auto;">
             <div class="col-2 col-xl-2 col-lg-3 col-sm-6 order-xl-1 order-lg-2 order-md-3 order-sm-3 my-2">
                 {% block sidebar_users %}
