--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -129,7 +129,7 @@
                     <!-- VK Widget -->
                     <div id="vk_groups"></div>
                     <script type="text/javascript">
-                        VK.Widgets.Group("vk_groups", {mode: 3, width: "auto"}, 147630853);
+                        VK.Widgets.Group("vk_groups", {mode: 3, width: "auto", color1: '3C3C3C', color2: 'FFFFFF', color3: '0B7CFD'}, 147630853);
                     </script>
                 </div>
 
