add storage for repays v2

--- a/haxball_site/templates/reservation/replays_list.html
+++ b/haxball_site/templates/reservation/replays_list.html
@@ -23,7 +23,7 @@
             </h3>
             <hr>
             {% for i in replays %}
-                <a href="https://www.haxball.com/replay?https://www.cis-haxball.com/{{ i.file }}">{{ i.name }}</a>
+                <a href="https://www.haxball.com/replay?v=3#?https://127.0.0.1:8000{{ i.file.url }}" accesskey="">{{ i.name }}</a>
             {% endfor %}
         </div>
     </div>
