--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -36,7 +36,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'tournament:league' 's7-premier_league' %}">Высшая лига</a>
-                    <a class="dropdown-item" href="{% url 'tournament:league' 's7-first_division' %}">Первый дивизион </a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's7-first_division' %}">Первая лига</a>
 
                     <a class="dropdown-item" href="{% url 'tournament:league' 's7-cup' %}">Кубок России</a>
 
