--- a/haxball_site/templates/core/include/new_comments.html
+++ b/haxball_site/templates/core/include/new_comments.html
@@ -23,7 +23,7 @@
     <div class="col-md-12">
 
         <div class="card mb-2 py-2 px-1" style="border-radius: 20px">
-            {% if user.is_authenticated and object.commentable %}
+            {% if user.is_authenticated and user.user_profile.can_comment and object.commentable %}
                 {% if object|get_class == 'Profile' %}
                     {% include 'core/include/new_form_comment.html' %}
                 {% elif object|get_class == 'League' %}
