--- a/haxball_site/templates/core/include/new_comments.html
+++ b/haxball_site/templates/core/include/new_comments.html
@@ -23,7 +23,7 @@
     <div class="col-md-12">
 
         <div class="card mb-2 py-2 px-1" style="border-radius: 20px">
-            {% if user.is_authenticated and user.user_profile.can_comment and object.commentable %}
+            {% if user.is_authenticated and object.commentable %}
                 {% if object|get_class == 'Profile' %}
                     {% include 'core/include/new_form_comment.html' %}
                 {% elif object|get_class == 'League' %}
@@ -33,6 +33,10 @@
                 {% elif object|get_class == 'Match' %}
                     {% include 'core/include/new_form_comment_match.html' %}
                 {% endif %}
+            {% elif user.is_authenticated and user.user_profile.can_comment %}
+                <h6 class="text-center">
+                    Брумасик считает, что вам лучше не писать здесь((
+                </h6>
             {% elif object.commentable %}
                 <h6 class="text-center">
                     <a class="text-primary" data-toggle="modal" data-target="#loginModal" style="cursor: pointer">
