--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load user_tags %}
 {% block styles %}
     <link rel="stylesheet" type="text/css" href="{% static "core/include/navbar.css" %}">
 {% endblock %}
@@ -49,7 +50,15 @@
 
                 </div>
             </li>
-
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle font-weight-bold mx-1 text-right" href="#" id="navbardrop"
+                   data-toggle="dropdown">
+                    Команды
+                </a>
+                <div class="dropdown-menu" style="width: 600px;">
+                    {% teams_in_navbar %}
+                </div>
+            </li>
             <li class="nav-item">
                 <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:tournaments' %}">Турниры</a>
             </li>
@@ -64,27 +73,27 @@
                     Архив
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item bg-secondary" href="https://www.cis-haxball.com/post/46/season_1">ЧР #1</a>
-                    <a class="dropdown-item bg-secondary" href="https://www.cis-haxball.com/post/47/season_2">ЧР #2</a>
-                    <a class="dropdown-item bg-secondary" href="https://www.cis-haxball.com/post/48/season_3">ЧР #3</a>
-                    <a class="dropdown-item bg-primary" href="https://www.cis-haxball.com/post/50/champions_league_1">ЛЧ
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/46/season_1">ЧР #1</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/47/season_2">ЧР #2</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/48/season_3">ЧР #3</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/50/champions_league_1">ЛЧ
                         #1</a>
 
-                    <a class="dropdown-item bg-secondary" href="https://www.cis-haxball.com/post/49/season_4">ЧР #4</a>
-                    <a class="dropdown-item submenu bg-secondary" href="#">ЧР #5</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/49/season_4">ЧР #4</a>
+                    <a class="dropdown-item submenu" href="#">ЧР #5</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="{% url 'tournament:league' 's5-premier_league' %}">Единая
                             лига</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 's5-cup' %}">Кубок России</a>
                     </div>
-                    <a class="dropdown-item submenu  bg-primary" href="#">ЛЧ #2</a>
+                    <a class="dropdown-item submenu" href="#">ЛЧ #2</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="{% url 'tournament:league' 'lch2-group-a' %}">Группа А</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 'lch2-group-b' %}">Группа B</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 'ploff_lch2' %}">Плей-офф</a>
                     </div>
 
-                    <a class="dropdown-item submenu bg-secondary" href="#">ЧР #6</a>
+                    <a class="dropdown-item submenu" href="#">ЧР #6</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="{% url 'tournament:league' 's6-premier_league' %}">Единая
                             лига</a>
