add teams in navbar

--- a/haxball_site/templates/core/include/teams_in_navbar.html
+++ b/haxball_site/templates/core/include/teams_in_navbar.html
@@ -4,7 +4,7 @@
     {% for t in teams %}
         <div class="col-3 justify-content-center">
             {% thumbnail t.logo "25x25" format="PNG" as im %}
-                <img src="{{ im.url }}" alt="{{ t.title }}" class="ml-1" width="25px">
+                <img src="{{ im.url }}" alt="{{ t.title }}" class="ml-1" width="25px" height="25px">
             {% endthumbnail %}
 
             <a href="{{ t.get_absolute_url }}">{{ t.title|truncatechars:11 }}</a>
