--- a/haxball_site/templates/core/include/teams_in_navbar.html
+++ b/haxball_site/templates/core/include/teams_in_navbar.html
@@ -1,13 +1,19 @@
 {% load thumbnail %}
 
 <div class="row justify-content-center">
-    {% for t in teams %}
-        <div class="col-3 justify-content-center">
-            {% thumbnail t.logo "25x25" format="PNG" as im %}
-                <img src="{{ im.url }}" alt="{{ t.title }}" class="ml-1" width="25px" height="25px">
-            {% endthumbnail %}
-
-            <a href="{{ t.get_absolute_url }}">{{ t.title|truncatechars:11 }}</a>
+    {% for l in leagues %}
+        <div class="col-12 text-center pb-1">
+            <a href="{{ l.get_absolute_url }}" class="h5 py-1">{{ l }}</a>
         </div>
+        {% for t in l.teams.all %}
+            <div class="col-3 justify-content-center">
+                {% thumbnail t.logo "25x25" format="PNG" as im %}
+                    <img src="{{ im.url }}" alt="{{ t.title }}" class="ml-1" width="25px" height="25px">
+                {% endthumbnail %}
+
+                <a href="{{ t.get_absolute_url }}">{{ t.title|truncatechars:11 }}</a>
+            </div>
+        {% endfor %}
     {% endfor %}
+
 </div>
